1、login flow 2、add redis

--- a/app-api/src/main/webapp/static/admin/tpl/public-header.html
+++ b/app-api/src/main/webapp/static/admin/tpl/public-header.html
@@ -161,19 +161,19 @@
             <!-- BEGIN USER LOGIN BUTTON -->
             <!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
             <li class="dropdown dropdown-user"  >
-                <a ui-sref="public.login" class="dropdown-toggle" >
+                <a ui-sref="public.frame.login" class="dropdown-toggle" >
                     <i class="fa fa-sign-in"></i>
                     <span class="userName userName-hide-on-mobile"> 登录 </span>
                 </a>
             </li>
             <li class="dropdown dropdown-user">
-                <a ui-sref="public.signin" class="dropdown-toggle" >
+                <a ui-sref="public.frame.signin" class="dropdown-toggle" >
                     <i class="fa fa-user-plus"></i>
                     <span class="userName userName-hide-on-mobile"> 注册 </span>
                 </a>
             </li>
             <li class="dropdown dropdown-user">
-                <a ui-sref="public.forget" class="dropdown-toggle" >
+                <a ui-sref="public.frame.forget" class="dropdown-toggle" >
                     <i class="fa fa-wrench"></i>
                     <span class="userName userName-hide-on-mobile"> 忘记密码？ </span>
 
